# portfolio_project

./: .gitignore  Cargo.toml  devlog.md  old Cargo.toml  words_1000.txt
frontend/: astro.config.mjs  faap.txt  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/.astro/: content-modules.mjs  data-store.json  settings.json
frontend/.astro/collections/: blog.schema.json
frontend/public/: fuji.glsl  goal.md  rot_uv.glsl  shader.glsl
frontend/public/images/drawio/: Event System.drawio  Network Graph.drawio  TTRPG System.drawio  ggrs.drawio
frontend/src/: content.config.ts  global.d.ts  lib.ts  types.ts
frontend/src/components/: ArticleImage.astro  ArticlePreview.astro  CodeSnippet.astro  DetailsHeader.astro  GLSLCanvas.astro  GLSLEditor.svelte  Image.astro  KVStoreTest.svelte  P5test.astro  PotluckThing.svelte  RedditStylePreview.astro  ShaderCanvas.svelte  StaticTreeView.svelte
frontend/src/images/ascention/: comfy4
frontend/src/layouts/: ArticleLayout.astro  HomeLayout.astro  Layout.astro  PicoArticleLayout.astro
frontend/src/pages/: about.mdx  contact.mdx  index.astro
frontend/src/pages/posts/: 1.mdx  2.mdx  EffectivelyInstantaneous.mdx  NQueens.mdx  Using p5.js In Markdown With Astro.mdx  [id].astro
frontend/src/posts/: 1.mdx  Ascention.mdx  EffectivelyInstantaneous.mdx  GLSLShaders.mdx  Integrating Sqlite.mdx  Lobster!.mdx  MeCaptcha.mdx  NQueens.mdx  NewPythonStuff.mdx  Potlock Thing.mdx  Potluck Thing.mdx  Redesign.mdx  Rust Metaprogramming.mdx  TTRPG & System Design 1.mdx  TTRPG & System Design 2.mdx  TuringTesting.mdx  Using p5.js In Markdown With Astro.mdx
frontend/src/scripts/: glsl-canvas.js
frontend/src/scripts/glsl-canvas/canvas/: canvas.js
source_only/: devlog.md
source_only/frontend/: astro.config.mjs  faap.txt  package-lock.json  package.json
source_only/frontend/public/: goal.md  resume.txt
source_only/frontend/src/: types.ts
source_only/frontend/src/components/: ArticlePreview.astro  Image.astro  P5test.astro  RedditStylePreview.astro
source_only/frontend/src/layouts/: ArticleLayout.astro  HomeLayout.astro  Layout.astro
source_only/frontend/src/pages/: about.mdx  contact.mdx  index.astro
source_only/frontend/src/pages/posts/: 1.mdx  2.mdx  EffectivelyInstantaneous.mdx  (+2 more)
source_only/src/: main.rs
src/: .env  example.rs  lib.rs  main.rs  stringvec.rs  tests.rs
