[package]
name = "Portfolio_Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71" , features = ["std", "backtrace"]}
axum = { version = "0.6.18", features = ["macros","json"] }
axum-extra = { version = "0.7.4", features = ["cookie", "form", "multipart", "cookie-private"] }
axum-server = "0.5.1"
hyper = { version = "0.14.26", features = ["http2"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }

[lib]
name = "lib"
path = "src/lib.rs"
