[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.100", features = ["std", "backtrace"] }
axum = { version = "0.8.7", features = ["macros", "json", "http2"] }
axum-extra = { version = "0.12.2", features = ["cookie", "form", "multipart", "cookie-private"] }
axum-response-cache = "0.4.0"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
dashmap = "6.1.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["cookies"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-full", "decompression-full", "fs", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

